--- a/css/content.css
+++ b/css/content.css
@@ -165,6 +165,16 @@ body{
     line-height: 1.2vw;
     z-index: 2;
 }
+.text36{
+    position: absolute;
+    margin-top: 1.1vw;
+    margin-left: 0.9vw;
+    font-size: 1.7vw;
+    font-family: "Arimo-Bold";
+    height: 2.15vw;
+    color:#323144;
+    z-index: 10;
+}
 .text8{
     position: absolute;
     margin-top: 6.4vw;
@@ -221,23 +231,16 @@ body{
     margin-left: 5.48vw;
     cursor: pointer;
 }
-.overlay {
+.help{
+    position: absolute;
     display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1000;
-  }
-  
-.popup {
-    display: none;
-    top: 50%;
-    left: 50%;
-    z-index: 20;
-    width: 20vw;
-    height: 20vw; 
+    width: 13.6vw;
+    height: 15.4vw;
+    margin-top: 9.5vw;
+    margin-left: 84vw;
+    background-color: #EEF5DB;
+    border: 0.115vw solid #323144;
+    z-index: 9;
 }
 .close {
     position: absolute;
@@ -246,13 +249,25 @@ body{
     background-color: #EEF5DB;
     border: 0.115vw solid #323144;
     cursor: pointer;
-    margin-left: 30%;
+    margin-left: 11.12vw;
+    margin-top: 0.8vw;
     z-index: 20;
+}
+.text31{
+    position: absolute;
+    margin-top: 3.5vw;
+    margin-left: 0.9vw;
+    font-size: 1.05vw;
+    font-family: "Arimo-Regular";
+    height: 2.15vw;
+    color:#323144;
+    line-height: 1.2vw;
+    z-index: 2;
 }
 .text29{
     position: absolute;
     margin-top: -1.1vw;
-    margin-left: 0.1vw;
+    margin-left: -0.17vw;
     font-size: 1.7vw;
     font-family: "ABC-trial";
     height: 2.15vw;
@@ -361,7 +376,7 @@ body{
     width: 8vw;
     height: 2.7vw;
 }
-.pagge5{
+#pagge5{
     position: absolute;
     width: 2vw;
     height: 2vw;
@@ -369,6 +384,39 @@ body{
     border: 0.115vw solid #323144;
     margin-left: 5.48vw;
     cursor: pointer;
+}
+.help1{
+    position: absolute;
+    display: none;
+    width: 13.6vw;
+    height: 16.6vw;
+    margin-top: 9.5vw;
+    margin-left: 84vw;
+    background-color: #EEF5DB;
+    border: 0.115vw solid #323144;
+    z-index: 9;
+}
+.close1 {
+    position: absolute;
+    width: 1.9vw;
+    height: 1.9vw;
+    background-color: #EEF5DB;
+    border: 0.115vw solid #323144;
+    cursor: pointer;
+    margin-left: 11.12vw;
+    margin-top: 0.8vw;
+    z-index: 20;
+}
+.text32{
+    position: absolute;
+    margin-top: 3.5vw;
+    margin-left: 0.9vw;
+    font-size: 1.05vw;
+    font-family: "Arimo-Regular";
+    height: 2.15vw;
+    color:#323144;
+    line-height: 1.2vw;
+    z-index: 2;
 }
 .text5{
     position: absolute;
@@ -754,14 +802,69 @@ body{
     margin-top: 36.3vw;
     cursor: pointer;
 }
-.box23{
+.box200{
     position: absolute;
-    width: 10vw;
-    height: 8vw;
+    width: 20vw;
+    height: 9vw;
     border: 0.115vw solid #323144;
-    margin-left: 70vw;
-    margin-top: 15vw;
+    margin-left: 69.5vw;
+    margin-top: 10.4vw;
     cursor: pointer;
+    overflow: hidden;
+}
+.box200 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    pointer-events: none;
+}
+.box201{
+    position: absolute;
+    width: 20vw;
+    height: 9vw;
+    border: 0.115vw solid #323144;
+    margin-left: 69.5vw;
+    margin-top: 20.6vw;
+    cursor: pointer;
+    overflow: hidden;
+}
+.box201 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    pointer-events: none;
+}
+.box202{
+    position: absolute;
+    width: 20vw;
+    height: 9vw;
+    border: 0.115vw solid #323144;
+    margin-left: 69.5vw;
+    margin-top: 30.8vw;
+    cursor: pointer;
+    overflow: hidden;
+}
+.box202 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    pointer-events: none;
+}
+.box203{
+    position: absolute;
+    width: 20vw;
+    height: 9vw;
+    border: 0.115vw solid #323144;
+    margin-left: 69.5vw;
+    margin-top: 40.8vw;
+    cursor: pointer;
+    overflow: hidden;
+}
+.box203 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    pointer-events: none;
 }
 .square8{
     position: absolute;
@@ -907,7 +1010,7 @@ body{
     width: 8vw;
     height: 2.7vw;
 }
-.pagge6{
+#pagge6{
     position: absolute;
     width: 2vw;
     height: 2vw;
@@ -915,6 +1018,39 @@ body{
     border: 0.115vw solid #323144;
     margin-left: 5.48vw;
     cursor: pointer;
+}
+.help2{
+    position: absolute;
+    display: none;
+    width: 13.6vw;
+    height: 10.6vw;
+    margin-top: 9.5vw;
+    margin-left: 84vw;
+    background-color: #EEF5DB;
+    border: 0.115vw solid #323144;
+    z-index: 9;
+}
+.close2 {
+    position: absolute;
+    width: 1.9vw;
+    height: 1.9vw;
+    background-color: #EEF5DB;
+    border: 0.115vw solid #323144;
+    cursor: pointer;
+    margin-left: 11.12vw;
+    margin-top: 0.8vw;
+    z-index: 20;
+}
+.text33{
+    position: absolute;
+    margin-top: 3.5vw;
+    margin-left: 0.9vw;
+    font-size: 1.05vw;
+    font-family: "Arimo-Regular";
+    height: 2.15vw;
+    color:#323144;
+    line-height: 1.2vw;
+    z-index: 2;
 }
 .city{
     position: absolute;
@@ -1360,7 +1496,7 @@ body{
     margin-left: 2.3vw;
     cursor: pointer;
 }
-.pagge7{
+#pagge7{
     position: absolute;
     width: 2vw;
     height: 2vw;
@@ -1368,6 +1504,39 @@ body{
     border: 0.115vw solid #323144;
     margin-left: 5.48vw;
     cursor: pointer;
+}
+.help3{
+    position: absolute;
+    display: none;
+    width: 13.6vw;
+    height: 19vw;
+    margin-top: 9.5vw;
+    margin-left: 84vw;
+    background-color: #EEF5DB;
+    border: 0.115vw solid #323144;
+    z-index: 9;
+}
+.close3 {
+    position: absolute;
+    width: 1.9vw;
+    height: 1.9vw;
+    background-color: #EEF5DB;
+    border: 0.115vw solid #323144;
+    cursor: pointer;
+    margin-left: 11.12vw;
+    margin-top: 0.8vw;
+    z-index: 20;
+}
+.text34{
+    position: absolute;
+    margin-top: 3.5vw;
+    margin-left: 0.9vw;
+    font-size: 1.05vw;
+    font-family: "Arimo-Regular";
+    height: 2.15vw;
+    color:#323144;
+    line-height: 1.2vw;
+    z-index: 2;
 }
 .fence{
     position: absolute;
@@ -1472,7 +1641,7 @@ body{
     margin-left: 2.3vw;
     cursor: pointer;
 }
-.pagge8{
+#pagge8{
     position: absolute;
     width: 2vw;
     height: 2vw;
@@ -1480,6 +1649,39 @@ body{
     border: 0.115vw solid #323144;
     margin-left: 5.48vw;
     cursor: pointer;
+}
+.help4{
+    position: absolute;
+    display: none;
+    width: 13.6vw;
+    height: 17.8vw;
+    margin-top: 9.5vw;
+    margin-left: 84vw;
+    background-color: #EEF5DB;
+    border: 0.115vw solid #323144;
+    z-index: 9;
+}
+.close4 {
+    position: absolute;
+    width: 1.9vw;
+    height: 1.9vw;
+    background-color: #EEF5DB;
+    border: 0.115vw solid #323144;
+    cursor: pointer;
+    margin-left: 11.12vw;
+    margin-top: 0.8vw;
+    z-index: 20;
+}
+.text35{
+    position: absolute;
+    margin-top: 3.5vw;
+    margin-left: 0.9vw;
+    font-size: 1.05vw;
+    font-family: "Arimo-Regular";
+    height: 2.15vw;
+    color:#323144;
+    line-height: 1.2vw;
+    z-index: 2;
 }
 .back1{
     position: absolute;
@@ -1635,7 +1837,7 @@ body{
 .text27{
     position: absolute;
     margin-top: -1.69vw;
-    margin-left: 0.15vw;
+    margin-left: -0.08vw;
     font-size: 1.7vw;
     font-family: "ABC-trial";
     height: 2.15vw;
@@ -1645,7 +1847,7 @@ body{
 .text28{
     position: absolute;
     margin-top: -1.1vw;
-    margin-left: 0.1vw;
+    margin-left: -0.19vw;
     font-size: 1.7vw;
     font-family: "ABC-trial";
     height: 2.15vw;
