--- a/css/content.css
+++ b/css/content.css
@@ -3,6 +3,26 @@ body{
     width: 100%;
     overflow: hidden;
 }
+#progress-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 0.5vw; /* 5px -> 0.5vw (примерно для viewport width 1000px) */
+    background-color: #ddd;
+    z-index: 1000;
+}
+
+#progress-bar {
+    width: 0%;
+    height: 100%;
+    background-color: #4CAF50;
+}
+
+.content {
+    padding: 2vw; /* 20px -> 2vw */
+    text-align: center;
+}
 /* первый экран*/
 .square{
     position: absolute;
@@ -11,7 +31,7 @@ body{
     rotate: -90deg;
     margin-top: 4.95vw;
     margin-left: 0.3vw;
-    z-index: 2;
+    z-index: 3;
 }
 .text{
     font-size: 1.38vw;
@@ -153,6 +173,7 @@ body{
     font-family: "Arimo-Bold";
     height: 2.15vw;
     color:#323144;
+    z-index: 3;
 }
 .text2{
     position: absolute;
@@ -184,6 +205,7 @@ body{
     height: 2.15vw;
     color:#323144;
     line-height: 1.2vw;
+    z-index: 3;
 }
 .text3{
     position: absolute;
@@ -359,6 +381,7 @@ body{
     border: 0.115vw solid #323144;
     margin-left: 0.087vw;
     cursor: pointer;
+    z-index: 3;
 }
 .button_section2{
     position: absolute;
@@ -368,6 +391,7 @@ body{
     border: 0.115vw solid #323144;
     margin-left: 2.3vw;
     cursor: pointer;
+    z-index: 3;
 }
 .buttun1{
     position: absolute;
@@ -375,6 +399,7 @@ body{
     margin-left: 89.64vw;
     width: 8vw;
     height: 2.7vw;
+    z-index: 3;
 }
 #pagge5{
     position: absolute;
@@ -384,6 +409,7 @@ body{
     border: 0.115vw solid #323144;
     margin-left: 5.48vw;
     cursor: pointer;
+    z-index: 3;
 }
 .help1{
     position: absolute;
@@ -427,6 +453,7 @@ body{
     height: 2.15vw;
     color:#323144;
     line-height: 1.2vw;
+    z-index: 3;
 }
 .square3{
     position: absolute;
@@ -435,6 +462,7 @@ body{
     margin-top: 46.6vw;
     margin-left: -0.45vw;
     rotate: -90deg;
+    z-index: 3;
 }
 .text6{
     position: absolute;
@@ -445,6 +473,7 @@ body{
     height: 2.15vw;
     color:#323144;
     line-height: 1.2vw;
+    z-index: 3;
 }
 .square4{
     position: absolute;
@@ -453,6 +482,7 @@ body{
     margin-top: 44.5vw;
     margin-left: 89.7vw;
     rotate: 90deg;
+    z-index: 3;
 }
 .box12{
     position: absolute;
@@ -460,6 +490,7 @@ body{
     height: 1.9vw;
     background-color: #FE6807;
     border: 0.115vw solid #323144;
+    z-index: 3;
 }
 .box13{
     position: absolute;
@@ -468,6 +499,7 @@ body{
     background-color: #FE6807;
     border: 0.115vw solid #323144;
     margin-left: 2.3vw;
+    z-index: 3;
 }
 .box14{
     position: absolute;
@@ -476,6 +508,7 @@ body{
     background-color: #FE6807;
     border: 0.115vw solid #323144;
     margin-left: 4.6vw;
+    z-index: 3;
 }
 .box15{
     position: absolute;
@@ -484,6 +517,7 @@ body{
     background-color: #FE6807;
     border: 0.115vw solid #323144;
     margin-left: 6.9vw;
+    z-index: 3;
 }
 .box16{
     position: absolute;
@@ -492,9 +526,11 @@ body{
     background-color: #FE6807;
     border: 0.115vw solid #323144;
     margin-left: 9.2vw;
+    z-index: 3;
 }
 .square5{
     position: absolute;
+    z-index: 3;
     width: 9vw;
     height: 2.4vw;
     margin-top: 3.36vw;
@@ -502,6 +538,7 @@ body{
 }
 .square6{
     position: absolute;
+    z-index: 3;
     width: 4.4vw;
     height: 2.4vw;
     margin-top: 3.36vw;
@@ -509,6 +546,7 @@ body{
 }
 .card{
     background-color: #EEF5DB;
+    z-index: 3;
     border: 0.115vw solid #323144;
     position: absolute;
     width: 52vw;
@@ -811,6 +849,7 @@ body{
     margin-top: 10.4vw;
     cursor: pointer;
     overflow: hidden;
+    z-index: 3;
 }
 .box200 img{
     width: 100%;
@@ -827,6 +866,7 @@ body{
     margin-top: 20.6vw;
     cursor: pointer;
     overflow: hidden;
+    z-index: 3;
 }
 .box201 img{
     width: 100%;
@@ -842,6 +882,7 @@ body{
     margin-left: 69.5vw;
     margin-top: 30.8vw;
     cursor: pointer;
+    z-index: 3;
     overflow: hidden;
 }
 .box202 img{
@@ -858,6 +899,7 @@ body{
     margin-left: 69.5vw;
     margin-top: 40.8vw;
     cursor: pointer;
+    z-index: 3;
     overflow: hidden;
 }
 .box203 img{
@@ -865,6 +907,40 @@ body{
     height: 100%;
     object-fit: cover;
     pointer-events: none;
+}
+.background1{
+    position: absolute;
+    width: 100vw;
+    height: 80vw;
+    z-index: 2;
+}
+.ground img{
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.ground1 img{
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.ground2 img{
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.ground3 img{
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .square8{
     position: absolute;
