--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -932,7 +932,7 @@
     }
 } 
 @media screen and (max-width: 414px) and (orientation: portrait) { 
-    .body{
+    body{
         overflow-x: hidden;
     }
     .square{
